2025-05-26T00:57:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15243877075 # 655
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-26
* notice: last 14d: unq all: 3 14
* notice: prev accum: outdated-unq outdated-all / unq all: 541 934 / 554 947
* notice: next accum: outdated-unq outdated-all / unq all: 541 934 / 555 948
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-05-25]

2025-05-25T01:00:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15232654987 # 654
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-25
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 539 932 / 553 946
* notice: next accum: outdated-unq outdated-all / unq all: 541 934 / 554 947
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-05-10 2025-05-11] / [2025-05-24]

2025-05-24T00:53:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15221709955 # 653
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-24
* notice: last 14d: unq all: 3 14
* notice: prev accum: outdated-unq outdated-all / unq all: 538 931 / 552 945
* notice: next accum: outdated-unq outdated-all / unq all: 539 932 / 553 946
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-05-09] / [2025-05-23]

2025-05-23T00:55:13Z: