@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-05-26T00:57:15Z",
-  "count_outdated" : 934,
-  "uniques_outdated" : 541,
+  "timestamp" : "2025-05-27T00:54:33Z",
+  "count_outdated" : 935,
+  "uniques_outdated" : 542,
   "count" : 948,
   "uniques" : 555,
   "clones" : [
-    {
-      "timestamp": "2025-05-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-05-13T00:00:00Z",
       "count": 2,
