@@ -1,3 +1,12 @@
+2025-05-27T00:54:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15264308220 # 656
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-27
+* notice: last 14d: unq all: 3 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 541 934 / 555 948
+* notice: next accum: outdated-unq outdated-all / unq all: 542 935 / 555 948
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-05-12] / []
+
 2025-05-26T00:57:15Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15243877075 # 655
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-26
